<resources>
    <string name="app_name">EasyCircleFlags</string>
    <string name="search_label">Search countries</string>
    <string name="search_clear">Clear search</string>
    <string name="no_matches">No country matches \u201c%1$s\u201d</string>
</resources>
