...
@Preview(showBackground = true)
@Composable
private fun FlagGridPreview() {
    EasyCircleFlagsTheme {
        FlagGrid(
            countries = listOf(
                Country("de", "Germany"),
                Country("jp", "Japan"),
                Country("br", "Brazil")
            )
        )
    }
}
...
